# Marmot-C-API

./: CMakeLists.txt  README.md
.github/workflows/: build_ubuntu.yml  build_windows.yml
examples/: example.c
include/Marmot-C-API/: MarmotElement_C.h
src/: MarmotElement_C.cpp
